# OpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
interfaces/app/: app.ixx
interfaces/engine/componets/: camera.ixx  timer.ixx
interfaces/engine/io/: window.ixx
interfaces/engine/render/: shader.ixx  texure.ixx
interfaces/engine/render/model/: mesh.ixx  model.ixx
interfaces/engine/world/skybox/: skybox.ixx
resources/models/sphere/: Sphere.mtl
src/: main.cpp
src/app/: app.cpp
src/engine/components/: camera.cpp  timer.cpp
src/engine/io/: window.cpp
src/engine/render/: shader.cpp  texture.cpp
src/engine/render/model/: mesh.cpp  model.cpp
src/engine/shaders/: default.frag  default.vert  light.frag  light.vert  skybox.frag  skybox.vert
src/engine/world/skybox/: skybox.cpp
